[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.19.1" }
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
hex = "*"
serde_json = "*"
clap = { version = "4.0.29", features = ["derive"] }
rustreexo = { version = "0.1.0", features = ["with-serde"] }
anyhow = "1.0.79"
log = "0.4.20"
