[package]
name = "guest_code_for_zk_proof"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.19.1", default-features = false, features = ["std"] }
sha2 = { version = "0.10.8", default-features = false }
rustreexo = { version = "0.1.0", features = ["with-serde"] }
